welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: not found: value faireLigneCouleur
    faireLigneCouleur(T,D)
    ^